--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
 <head>
 <meta charset = "utf-8">
 <meta name = "description" content = "東京精錬は貴金属精錬を行う会社です">
-<meta name = "keywords" content = "貴金属,精錬,分析,金,プラチナ,パラジウム,銀,ゴールド,シルバー,Au,Pt,Pd,Ag,東京精錬">
+<!-- 
+ <meta name = "keywords" content = "貴金属,精錬,分析,金,プラチナ,パラジウム,銀,ゴールド,シルバー,Au,Pt,Pd,Ag,東京精錬">
+-->
+<meta name = "keywords" content = "KALL,株式会社">
 <link href="style.css" rel="stylesheet" type="text/css" />
 <title>東京精錬</title><!--検索結果の一覧画面やお気に入り登録等で使用-->
 
@@ -22,6 +25,7 @@
   <p>金、銀、プラチナ、パラジウム、その他レアメタル等リサイクルを通してお客様に貢献致します。</p>
   <p>東京精錬は、少数精鋭ながら豊富な知識と軽いステップワークでお客様のニーズにお応えして参ります。</p>
   <p>今まで捨てていたものにも価値を見出せるようお客様と共に成長していきます。</p>
+  <p><input  type="button" Value="https://bulbul343.github.io/github/test.html"></p>
 </div>
 
 
